# iplotx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/source/: api.md  conf.py  index.md  installing.md  providers.md  sg_execution_times.rst
docs/source/_static/: custom.css
docs/source/api/: complete_style_specification.md  style.md
gallery/: GALLERY_HEADER.rst  plot_arrows.py  plot_chess_masters.py  plot_cliques.py  plot_cogent3_layouts.py  plot_company_structure.py  plot_complex.py  plot_edgepadding.py  plot_elements.py  plot_ete4.py  plot_four_grids.py  plot_loops.py  plot_mouse_hover.py  plot_multistyle.py  plot_parallel_igraph_networkx.py  plot_ports.py  plot_shortest_path.py  plot_simple_networkx.py  plot_skbio_tree.py  plot_traveling_salesman.py  plot_tree_node_background.py  plot_tree_style_clades.py  plot_with_colorbar.py
gallery/basic/: plot_arcs.py
gallery/biology/: GALLERY_HEADER.rst  plot_antibody_clone.py  plot_breast_cancer_ppi.py  plot_cell_cycle_arrest.py  plot_food_network.py  plot_phyloframe_scatter_tree.py  plot_tca_cycle.py
gallery/biology/data/: 80201010000000001.mst  GN-tree.json
gallery/fun/: GALLERY_HEADER.rst  plot_67.py
gallery/other/: plot_hover_neighborhood.py  plot_mouse_hover.py  plot_social_network_circles.py
gallery/style/: plot_curved_waypoints.py  plot_custom_vertex.py  plot_edge_multicolor.py  plot_waypoints.py
gallery/tree/: plot_angular_waypoints.py  plot_cladeedges.py  plot_cogent3_layouts.py  plot_elements_tree.py  plot_equalangle.py  plot_ete4.py  plot_leafedges_and_cascades.py  plot_phyloframe.py  plot_phyloframe_tree.py  plot_simpletreedataprovider.py  plot_tree_node_background.py  plot_tree_style_clades.py
iplotx/: __init__.py  artists.py  cascades.py  groups.py  heuristics.py  importing.py  label.py  layout.py  matplotlib.py  network.py  plotting.py  style.py  styles.py  tree.py  typing.py  undirected.py  version.py  vertex.py
iplotx/art3d/: arrow.py  edge.py  vertex.py
iplotx/edge/: __init__.py  arrow.py  common.py  directed.py  geometry.py  label.py  leaf.py  ports.py  undirected.py
iplotx/ingest/: __init__.py  common.py  heuristics.py  layout.py  typing.py
iplotx/network/: __init__.py
iplotx/style/: __init__.py  leaf_info.py  library.py
iplotx/tools/: geometry.py  matplotlib.py
iplotx/tree/: __init__.py  scalebar.py
iplotx/utils/: geometry.py  matplotlib.py
scripts/: copy_github_release_into_version.sh
tests/: test_biopython.py  test_cascades.py  test_cogent3.py  test_edge.py  test_edge_geometry.py  test_ete4.py  test_geometry.py  test_graph_tool.py  test_heuristics.py  test_igraph.py  test_igraph_3d.py  test_matplotlib_utils.py  test_networkx.py  test_simple_network_provider.py  test_simple_tree_provider.py  test_skbio.py  test_style.py  utils.py
(+19 files in other folders)
