[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iplotx"
description = "Plot networkx from igraph and networkx."
authors = [
  {name = "Fabio Zanini", email = "fabio.zanini@unsw.edu.au"}
]
maintainers = [
  {name = "Fabio Zanini", email = "fabio.zanini@unsw.edu.au"}
]
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "matplotlib",
  "pandas",
  "numpy",
]
license = {text = "MIT"}
license-files = ["LICEN[CS]E.*"]
keywords = ["network", "graph", "visualisation", "plotting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  ]

[project.urls]
Homepage = "https://github.com/fabilab/iplotx"
Documentation = "https://readthedocs.org/iplotx"
Repository = "https://github.com/fabilab/iplotx.git"
"Bug Tracker" = "https://github.com/fabilab/iplotx/issues"
Changelog = "https://github.com/fabilab/iplotx/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "iplotx/version.py"

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "3.11", "3.10"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.tox.env.type]
description = "run type check on code base"
deps = ["mypy==1.11.2", "types-cachetools>=5.5.0.20240820", "types-chardet>=5.0.4.6"]
commands = [["mypy", "iplotx{/}tox"], ["mypy", "tests"]]
